Added dependency from test project to ChargingStation

--- a/ChargingStation.Test.Unit/ChargingStation.Test.Unit.csproj
+++ b/ChargingStation.Test.Unit/ChargingStation.Test.Unit.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChargingStation\ChargingStation.csproj" />
+  </ItemGroup>
+
 </Project>
